fix(map): Make line breaks work in description

--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -48,8 +48,9 @@
 }
 
 .description-box {
-    max-height: 60vh;
-    overflow-y: auto
+    max-height: 65vh;
+    overflow-y: auto;
+    white-space: pre-line;
 }
 
 .search-button {
