--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -43,9 +43,23 @@
     font-family: initial;
 }
 
+#infobox.editing {
+    width: 700px;
+}
+
 #locname {
     font-size: 1.3em;
     margin-bottom: 0.2em;
+}
+
+.edit-loc {
+    float: left;
+    width: 45%;
+    margin-right: 5%
+}
+
+.edit-loc mat-form-field {
+    width: 100%;
 }
 
 .description-box {
@@ -66,6 +80,11 @@
 .fab.selbutton {
     color: white;
     background-color: var(--primary-color);
+}
+
+.update-button {
+    margin-top: 2px;
+    float: right;
 }
 
 .only-mobile {
