--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,11 @@ mat-form-field, mat-form-field *, .markdown * {
     user-select: text;
 }
 
+* {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
+    -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
+}
+
 /* Scrollbar */
 ::-webkit-scrollbar {
     width: 6px;
