--- a/src/styles.css
+++ b/src/styles.css
@@ -21,18 +21,13 @@ body, .image-background {
     user-select: none;
 }
 
-mat-form-field, mat-form-field *, .markdown * {
+mat-form-field, mat-form-field *, .markdown *, input {
     -webkit-tap-highlight-color: transparent;
     -webkit-user-select: text;
     -khtml-user-select: text;
     -moz-user-select: text;
     -ms-user-select: text;
     user-select: text;
-}
-
-* {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
-    -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
 }
 
 /* Scrollbar */
