fix(map): Make background gray

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,6 +1,8 @@
 <app-xunk-spinner *ngIf="!maploaded"></app-xunk-spinner>
 
-<div class="main" [class.sandbox]="dataService.isSandbox">
+<div class="main"
+    [class.sandbox]="dataService.isSandbox"
+    [class.loaded]="maploaded">
   <div id="map" class="map"></div>
   <img id="marker" src="/assets/map/marker_blue_s.png">
   <img id="user-marker" src="/assets/map/marker_red_s.png">
