--- a/src/app/venter/file-complaint/file-complaint.component.html
+++ b/src/app/venter/file-complaint/file-complaint.component.html
@@ -1,24 +1,27 @@
 <div class="container">
     <div *ngIf="complaint.images.length === 0">
-        <img class="header-image" src-fallback="assets/add_image_placeholder.svg" src="assets/placeholder_image.svg">
+        <img class="placeholder-image" src-fallback="assets/add_image_placeholder.svg" src="assets/placeholder_image.svg">
     </div>
 
     <div *ngIf="complaint.images">
         <div class="slideshow-container">
             <img *ngFor="let image of complaint.images; let i=index" [src]="image" [ngClass]="{'image-active': selectedindex == i}">
 
-            <div style="text-align:center">
-                <span *ngFor="let dot of complaint.images; let i=index" class="dot" (click)="selectImage(i)" [ngClass]="{'active': selectedindex == i}"></span>
+            <div class="image-dot">
+                <span *ngFor="let dot of complaint.images; let i=index" class="dot" (click)="selectImage(i)" 
+                    [ngClass]="{'active': selectedindex == i}">
+                </span>
             </div>
 
         </div>
     </div>
 
-    <div class="input-fields">
+    <div class="input-fields">  
         <mat-form-field>
-            <input matInput type="text" style="width: 90%" placeholder="Enter Description" [(ngModel)]="complaint.description">
-            <input style="display:none;" type="file" accept="image/*" #file id="file" (change)="uploadImage($event.target.files)">
-            <button (click)="file.click()" style="right: true" mat-icon-button>
+            <input matInput type="text" class="complaint-description" 
+                placeholder="Enter Description" [(ngModel)]="complaint.description">
+            <input class="complaint-image" type="file" accept="image/*" #file id="file" (change)="uploadImage($event.target.files)">
+            <button (click)="file.click()" class="add-image-button" mat-icon-button>
                 <mat-icon>add_a_photo</mat-icon>
             </button>
         </mat-form-field>
@@ -36,7 +39,7 @@
             "Added Tags"
         </div>
         <mat-chip-list>
-            <mat-chip *ngFor="let selectedTag of selectedTags" style="padding-top:1%; padding-bottom: 1%; background-color: yellowgreen">
+            <mat-chip *ngFor="let selectedTag of selectedTags">
                 {{ selectedTag }}
                 <button (click)="clearTag(selectedTag)" mat-icon-button>
                     <mat-icon>clear</mat-icon>
@@ -45,7 +48,7 @@
         </mat-chip-list>
     </div>
     <div>
-        <mat-form-field style="width: 50%">
+        <mat-form-field>
             <input type="text" placeholder="Add Tags" aria-label="Number" matInput [formControl]="myControl"
                 [matAutocomplete]="auto" [(ngModel)]="tag">
             <mat-autocomplete #auto="matAutocomplete">
@@ -59,6 +62,8 @@
         </button>
     </div>
     <div>
-        <button (click)="submitComplaint()" mat-raised-button class="complaint-button" [routerLink]="['/venter/complaints-home']">Submit</button>
+        <button (click)="submitComplaint()" mat-raised-button class="complaint-button" 
+            [routerLink]="['/venter/complaints-home']">Submit
+        </button>
     </div>
 </div>
